// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering when default state should match 1`] = `
<Styled(Container)
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <Styled(Content)>
    <Styled(Form)>
      <Styled(Item)
        fixedLabel={true}
      >
        <Styled(Label)>
          Name
        </Styled(Label)>
        <Styled(Input)
          autoCapitalize="words"
          disabled={true}
          onChangeText={[Function]}
          value="A friend"
        />
      </Styled(Item)>
    </Styled(Form)>
    <Styled(Button)
      full={true}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "pink",
          "flexBasis": "66%",
          "margin": 20,
        }
      }
    >
      <Styled(Text)
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        Color
      </Styled(Text)>
    </Styled(Button)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`Rendering when editing should match 1`] = `
<Styled(Container)
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <Styled(Content)>
    <Styled(Form)>
      <Styled(Item)
        fixedLabel={true}
      >
        <Styled(Label)>
          Name
        </Styled(Label)>
        <Styled(Icon)
          name="create"
        />
        <Styled(Input)
          autoCapitalize="words"
          disabled={false}
          onChangeText={[Function]}
          value="A friend mod"
        />
      </Styled(Item)>
    </Styled(Form)>
    <Styled(Button)
      full={true}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "pink",
          "flexBasis": "66%",
          "margin": 20,
        }
      }
    >
      <Styled(Text)
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        Color
      </Styled(Text)>
    </Styled(Button)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`Rendering when no friend should match 1`] = `<Styled(Container) />`;
